@@ -1,3 +1,8 @@
+2009-11-29  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/common.h
+    Add macro UNUSED for marking function parameters as unused.
+
 2009-10-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests/misc_test.c
